@startuml

    class "Explanation of the symbols used" as DESCRIPTION #FFF {
    - AutoField (identifiers)
    ..
    + Regular field (anything)
    ..
    # ForeignKey (ManyToMany)
    ..
    ~ ForeignKey (OneToOne, OneToMany)
    --
}


class "examination.Examination <2. Медицинские обследования>" as examination.Examination #f3d6f4 {
    Обследование
    ..
    Обследование
    --
    - id (AutoField) - 
    + name (CharField) - 
    + description (TextField) - 
    --
}


class "examination.GroupExaminations <2. Медицинские обследования>" as examination.GroupExaminations #f3d6f4 {
    Группа обследований
    ..
    Группа обследований
    --
    - id (AutoField) - 
    + name (CharField) - 
    ~ event (ForeignKey) - 
    # examinations (ManyToManyField) - 
    --
}
examination.GroupExaminations *-- ekp.Event
examination.GroupExaminations *--* examination.Examination


class "examination.ResultExamination <2. Медицинские обследования>" as examination.ResultExamination #f3d6f4 {
    Результат обследования
    ..
    Результат обследования
    --
    - id (AutoField) - 
    ~ template (ForeignKey) - 
    ~ examination (ForeignKey) - 
    ~ sportsman (ForeignKey) - 
    + result (JSONField) - 
    + date (DateTimeField) - 
    --
}
examination.ResultExamination *-- examination.ExaminationTemplate
examination.ResultExamination *-- examination.Examination
examination.ResultExamination *-- users.User


class "examination.ResultIndicator <2. Медицинские обследования>" as examination.ResultIndicator #f3d6f4 {
    Результат показателя
    ..
    Результат показателя
    --
    - id (AutoField) - 
    + value (FloatField) - 
    ~ result_examination (ForeignKey) - 
    ~ group_indicators (ForeignKey) - 
    ~ indicator (ForeignKey) - 
    + result (JSONField) - 
    --
}
examination.ResultIndicator *-- examination.ResultExamination
examination.ResultIndicator *-- examination.GroupIndicators
examination.ResultIndicator *-- examination.Indicator


class "examination.Unit <2. Медицинские обследования>" as examination.Unit #f3d6f4 {
    Единица измерения
    ..
    Unit
    Единица измерения
    --
    - id (AutoField) - 
    + name (CharField) - 
    + short_name (CharField) - 
    + description (TextField) - 
    --
}


class "examination.Indicator <2. Медицинские обследования>" as examination.Indicator #f3d6f4 {
    Показатель
    ..
    Indicator
    Показатель
    --
    - id (AutoField) - 
    + name (CharField) - 
    + description (TextField) - 
    + type_indicator (PositiveIntegerField) - 
    + value_property_indicator (PositiveIntegerField) - 
    ~ category_indicator (ForeignKey) - 
    ~ unit (ForeignKey) - 
    + property_data (JSONField) - 
    + property_function (CharField) - 
    + is_property (BooleanField) - 
    --
}
examination.Indicator *-- examination.CategoryIndicators
examination.Indicator *-- examination.Unit


class "examination.CategoryIndicators <2. Медицинские обследования>" as examination.CategoryIndicators #f3d6f4 {
    Категория медецинских показателей
    ..
    Категория медецинских показателей
    --
    - id (AutoField) - 
    + name (CharField) - 
    --
}


class "examination.ExaminationTemplate <2. Медицинские обследования>" as examination.ExaminationTemplate #f3d6f4 {
    Шаблон медицинского обследования
    ..
    Medical Examination Template
    Шаблон медицинского обследования
    --
    - id (AutoField) - 
    + name (CharField) - 
    + description (TextField) - 
    + scheme (JSONField) - 
    + is_publish (BooleanField) - 
    --
}


class "examination.ExaminationTemplateIndicators <2. Медицинские обследования>" as examination.ExaminationTemplateIndicators #f3d6f4 {
    Показатель шаблона обследований
    ..
    Показатель шаблона обследований
    --
    - id (AutoField) - 
    ~ examination_template (ForeignKey) - 
    ~ indicator (ForeignKey) - 
    ~ group_indicator (ForeignKey) - 
    --
}
examination.ExaminationTemplateIndicators *-- examination.ExaminationTemplate
examination.ExaminationTemplateIndicators *-- examination.Indicator
examination.ExaminationTemplateIndicators *-- examination.GroupIndicators


class "examination.GroupIndicators <2. Медицинские обследования>" as examination.GroupIndicators #f3d6f4 {
    Группа медецинских показателей
    ..
    Группа медецинских показателей
    --
    - id (AutoField) - 
    + name (CharField) - 
    + short_name (CharField) - 
    + description (TextField) - 
    --
}


class "examination.IndicatorWeight <2. Медицинские обследования>" as examination.IndicatorWeight #f3d6f4 {
    Вес показателя
    ..
    Вес показателя
    --
    - id (AutoField) - 
    + value (FloatField) - 
    ~ examination_template (ForeignKey) - 
    ~ indicator (ForeignKey) - 
    + max_limit_value (FloatField) - 
    + min_limit_value (FloatField) - 
    + last_update_value (DateTimeField) - 
    + last_update_limits (DateTimeField) - 
    --
}
examination.IndicatorWeight *-- examination.ExaminationTemplate
examination.IndicatorWeight *-- examination.Indicator


@enduml
